# ptxzip

./: CMakeLists.txt  README.md  ScanNode.cpp  main.cpp  ptxreader.cpp  ptxreader.hpp  ptxwriter.cpp  ptxwriter.hpp
data/: surface.ptx
inc/: IScanInterface.hpp  ptxreader.hpp  ptxwriter.hpp
